# media_engine

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
deploy/hetzner/: .env.example  Caddyfile  Caddyfile.wildcard  Dockerfile.caddy  Dockerfile.hetzner  README.md  _lib.sh  backup.sh  bootstrap.sh  daemon.json  docker-compose.override.yaml  docker-compose.wildcard.yaml  doctor.sh  logs.sh  restore.sh  secrets.env.example  shell.sh  sysctl-hardening.conf  unattended-upgrades.conf  update.sh
deploy/hetzner/init/: 01-vector.sql
docs/: Hetzner_Deployment_Handbook.md  adding_a_backend.md  adding_an_operation.md  api_reference.md  architecture.md  audit-2026-05-27.md  cli_reference.md  deployment.md  mcp_tools.json  openapi.json  phase-6-5-bugs.md  phase-6-7.md  phase-7.md  phase-8.md  profile_analysis_full.md  quickstart.html  web_ui.md  web_ui_deferred.md  writing_a_profile.md
examples/: README.md  analysis_full_pipeline_e2e.sh
infra/: README.md
infra/docker/: Dockerfile  docker-compose.yaml
infra/helm/media-engine/: Chart.yaml  values.yaml
media_engine/: __init__.py  bootstrap.py  config.py  logging_setup.py
media_engine/_alembic/: env.py  script.py.mako
media_engine/_alembic/versions/: 0001_initial_schema.py  0002_events_job_id.py
media_engine/api/: __init__.py  _state.py  app.py  auth.py  cost_routes.py  health.py  jobs.py  middleware.py  plugins.py  routes.py  sse.py  uploads.py
media_engine/artifacts/: __init__.py  analysis.py  base.py  media.py  text.py
media_engine/backends/: __init__.py  _base.py  _gemini_vision.py  _pricing.py  _speaker_store.py  _speaker_store_pg.py  _vec.py
media_engine/backends/acquire/: ffmpeg_recorder.py  playwright_hls.py  ytdlp.py
media_engine/backends/chunk_semantic/: default.py
media_engine/backends/cluster/: hdbscan.py
media_engine/backends/diarize/: pyannote.py
media_engine/backends/document/: pymupdf.py
media_engine/backends/embed_text/: sentence_transformers.py
media_engine/backends/embed_voice/: pyannote.py
media_engine/backends/frames_analyze/: gemini.py  vllm_mlx.py
media_engine/backends/frames_compare/: gemini.py
media_engine/backends/image_classify/: gemini.py  open_clip.py
media_engine/backends/image_describe/: gemini.py
media_engine/backends/image_ocr/: gemini_vision.py  rapidocr.py
media_engine/backends/intelligence_extract/: claude.py  gemini.py  mlx_lm.py
media_engine/backends/match/: pgvector.py  sqlite.py
media_engine/backends/sample_frames/: ffmpeg_uniform.py  pyscenedetect.py
media_engine/backends/search/: _text.py  pgvector.py  postgres_tsvector.py  sqlite.py  sqlite_fts5.py
media_engine/backends/transcribe/: assemblyai.py  mlx_whisper.py
media_engine/cli/: __init__.py  _handle.py  acquire_live.py  api.py  batch.py  cost.py  daemon.py  db.py  doctor.py  events.py  health.py  mcp.py  profile.py  search.py  speakers.py  storage.py  web.py
media_engine/daemon/: __init__.py  client.py  entry.py  protocol.py  server.py
media_engine/mcp/: __init__.py  exporter.py  server.py
media_engine/ops/: __init__.py  _base.py  _registry.py
media_engine/profiles/: __init__.py  introspect.py  loader.py  pipeline.py  schema.py
media_engine/runtime/: __init__.py  audio_slice.py  cache.py  cost_tracker.py  dag.py  disk_guard.py  doctor.py  engine.py  events.py  eviction.py  ffprobe.py  gc.py  hardware.py  health.py  heartbeat.py  jsonschema.py  lineage.py  log_pump.py  model_pool.py  plugins.py  resources.py  retry.py  search_query.py  secrets.py  server_manager.py  storage.py
profiles/: cooking-recipes.md  diy-electronics.md  general-custom.md  technical-academic.md  video-knowledge.md
profiles/analysis-full/: analysis-full.yaml  analysis_schema.json  analyze_prompt.md  session_report.md.j2  speakers.csv  zeitgeist_report.md.j2
profiles/examples/: speaker-id.yaml  teams-meeting.yaml  transcribe-and-diarize.yaml  url-to-summary.yaml  video-comprehend.yaml
scripts/: _screenshot_fixtures.py  build_web.sh  catalog_reset.py  gen_mcp_tools.py  gen_openapi.py  gen_ui_screenshots.sh  op_matrix.py  verify_b001.sh  verify_observability.sh  verify_settings.sh
tests/: _intel.py  _search_helpers.py  conftest.py  e2e_op_matrix_report.md  test_acquire_progress_job_id.py  test_api.py  test_api_cost.py  test_api_events_routes.py  test_api_plugins.py  test_api_profiles.py  test_api_run_preview.py  test_api_search.py  test_api_settings.py  test_api_ui_mount.py  test_api_uploads.py  test_artifacts.py  test_artifacts_speaker.py  test_audit_fixes.py  test_backend_assemblyai.py  test_backend_embed_voice_pyannote.py  test_backend_pgvector.py  test_backend_vllm_mlx.py  test_backends_registry.py  test_build_web_pnpm_workspace.py  test_cache.py  test_cli_api.py  test_cli_batch.py  test_cli_db.py  test_cli_events.py  test_cli_run.py  test_cli_search.py  test_cli_smoke.py  test_cli_speakers.py  test_cli_web.py  test_config.py  test_cost_tracker.py  test_daemon.py  test_dag.py  test_disk_guard.py  test_dockerfile.py  (+84 more)
tests/fixtures/: build_fixtures.py  sample.m4a  speakers.csv
web/: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.ts
web/src/: app.css  app.html
(+131 files in other folders)
