[project]
name = "media_engine"
version = "0.6.1"
description = "Universal media-processing engine — typed artifacts, composable operations, pluggable backends."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "anyio>=4.0",
    "jinja2>=3.1",
    "PyYAML>=6.0",
    "python-frontmatter>=1.1",
    "rapidfuzz>=3.6",
    "psutil>=5.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
transcribe-mlx = ["mlx-whisper>=0.4"]
diarize        = ["pyannote.audio>=4.0", "torch>=2.2"]
embed          = ["sentence-transformers>=2.7"]
chunk          = ["nltk>=3.8"]
vlm-cloud      = ["google-genai>=0.4", "anthropic>=0.40"]
vlm-local      = ["openai>=1.30"]
llm-mlx        = ["mlx-lm>=0.18"]
ocr            = ["rapidocr-onnxruntime>=1.3"]
classify       = ["open_clip_torch>=2.24"]
acquire-url    = ["yt-dlp>=2024.5", "playwright>=1.44"]
live           = ["pynput>=1.7"]
document       = ["pymupdf>=1.24"]
search         = ["sqlite-vss>=0.1.2"]
api            = ["fastapi>=0.110", "uvicorn[standard]>=0.30", "sse-starlette>=2.1"]
mcp            = ["mcp>=0.3"]
postgres       = ["psycopg[binary]>=3.1", "pgvector>=0.2"]

[project.scripts]
med = "media_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["media_engine"]

# Phase 6 commit 40: include the SvelteKit build artifact (populated by
# `scripts/build_web.sh` / `pnpm -C web build` ahead of `hatch build`).
# Gitignored on disk; the wheel ships it so `pip install media_engine[api]`
# from PyPI ships the UI for free.
[tool.hatch.build.targets.wheel.force-include]
"media_engine/web/dist" = "media_engine/web/dist"

[tool.hatch.build.targets.sdist]
# Don't publish the SvelteKit source or its build artefact in source
# distributions — wheels are the supported install path for the UI.
exclude = ["web/", "media_engine/web/dist/"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "needs_mlx: requires mlx-whisper",
    "needs_pyannote: requires pyannote + HF_TOKEN",
    "needs_gemini: requires GEMINI_API_KEY",
    "needs_vllm: requires vllm-mlx server reachable",
    "needs_postgres: requires MEDIA_ENGINE_TEST_POSTGRES_URL",
    "needs_ytdlp: requires the yt-dlp binary + network (CI optional)",
    "needs_playwright: requires playwright + a chromium browser install",
    "needs_pymupdf: requires pymupdf (uv sync --extra document)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["media_engine", "tests"]
strict = ["media_engine"]
pythonVersion = "3.11"
